--- a/plugin.yml
+++ b/plugin.yml
@@ -14,3 +14,5 @@ commands:
         description: spawn a witch
     world:
         description: switch worlds
+    setitemspawn:
+        description: set item spawn
